Implemented fonts(!) and "improved" resource management